Fixed uneven styles again for new pages

--- a/public/CSS/collection.css
+++ b/public/CSS/collection.css
@@ -1,3 +1,14 @@
+* {
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    margin: 0px;
+}
+
 .collection-container{
     display: flex;
     margin: 2rem;
