--- a/public/CSS/friends.css
+++ b/public/CSS/friends.css
@@ -1,10 +1,12 @@
 * {
-    padding: 0;
+    padding: 0px;
     box-sizing: border-box;
 }
+
 body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    margin: 0px;
 }
 h1 {
     text-align: center;
